# Beryl

./: .gitignore  Makefile  limine.cfg
kernel/: Cargo.toml  Makefile  build.rs  license.txt
kernel/src/: apic.rs  backtrace.rs  core_locals.rs  cpu.rs  fb_renderer.rs  framebuffer.rs  gdt.rs  handlers.asm  hpet.rs  interrupts.rs  logging.rs  main.rs  serial.rs  smp.rs
kernel/src/acpi/: mod.rs  rsdp.rs  sdt.rs
kernel/src/mm/: addr.rs  heap.rs  mod.rs  pmm.rs  slab.rs
kernel/src/utils/: bitmap.rs  mod.rs
