[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bilge = "0.1.1"
limine = "0.1.10"
log = { version = "0.4.17", default-features = false }
spin = "0.9.8"

[build-dependencies]
nasm-rs = "0.2.5"
