[package]
name = "kernel"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[profile.release]
debug = 1
lto = "fat"
opt-level = 3

[dependencies]
bilge = "0.1.1"
limine = "0.1.10"
log = { version = "0.4.17", default-features = false }
psf2 = { version = "0.4.0", default-features = false }
rustc-demangle = { version = "0.1.23", default-features = false }
spin = "0.9.8"
vte = "0.11.1"
xmas-elf = { version = "0.9.0", default-features = false }

[build-dependencies]
nasm-rs = "0.2.5"
